CHATS_SIT/force-app/main/default/objects/Referral_Information__c.object
<CustomObject>
    <fields>
        <fullName>CBMS_Field_API_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>CBMS Field API Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CBMS_Object_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>CBMS Object Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field_API_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Field API Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Field Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IDN_CLIENT__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>IDN CLIENT</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProviderId__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>ProviderId</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_Value__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>New Value</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Object_API_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>CHATS Object API Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Old_Value__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Old Value</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Referral_Id__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Referral Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Referral_Type__c</fullName>
        <label>Referral Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>CBMS_Ref_Type</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>SF_Record_Id__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>SF Record Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Section_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Section Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>isEditable__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isEditable</label>
        <type>Checkbox</type>
    </fields>
    <label>Referral Information</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>CBMS_Object_Name__c</columns>
        <columns>Object_API_Name__c</columns>
        <columns>Field_API_Name__c</columns>
        <columns>Field_Name__c</columns>
        <columns>isEditable__c</columns>
        <columns>OBJECT_ID</columns>
        <columns>New_Value__c</columns>
        <columns>Old_Value__c</columns>
        <columns>Referral_Id__c</columns>
        <columns>Referral_Type__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Referral Info Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Referral Informations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>