CHATS_SIT/force-app/main/default/objects/Referral_Information__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CBMS_Object_Name__c</columns>
    <columns>Object_API_Name__c</columns>
    <columns>Field_API_Name__c</columns>
    <columns>Field_Name__c</columns>
    <columns>isEditable__c</columns>
    <columns>OBJECT_ID</columns>
    <columns>New_Value__c</columns>
    <columns>Old_Value__c</columns>
    <columns>Referral_Id__c</columns>
    <columns>Referral_Type__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>